Fix blog post spacing

--- a/Frontend/src/scss/_blogpost-page.scss
+++ b/Frontend/src/scss/_blogpost-page.scss
@@ -45,8 +45,8 @@
   }
 
   .blogpost__content {
-    @extend .article__content;
-
+    margin: 5%;
+    padding-top: 5%;
   
     p:nth-of-type(3) {
       margin-top: 25px;
